tests/snapshots/run_wpt_conformance__litert_mul_float16_5D_tensors.snap
---
source: tests/run_wpt_conformance.rs
assertion_line: 57
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "mul.https.any.js",
    "mul float16 5D tensors",
    "litert",
    "PASS",
)
